Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,12 @@
 # ASP.NET Core (.NET Framework)
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'Suscription Azure (c584df84-2778-41b6-a949-e7c9e8f3cf8b)'
+    appType: 'webApp'
+    WebAppName: 'mi-aplicacion-web-test'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+
 # Build and test ASP.NET Core projects targeting the full .NET Framework.
 # Add steps that publish symbols, save build artifacts, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
