--- a/WebApiBicingGP/appsettings.json
+++ b/WebApiBicingGP/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Url": {
+    "StatusInformation": "https://opendata-ajuntament.barcelona.cat/data/dataset/6aa3416d-ce1a-494d-861b-7bd07f069600/resource/b20e711d-c3bf-4fe5-9cde-4de94c5f588f/download",
+    "StationInformation": "https://opendata-ajuntament.barcelona.cat/data/dataset/bd2462df-6e1e-4e37-8205-a4b8e7313b84/resource/e5adca8d-98bf-42c3-9b9c-364ef0a80494/download"
+  }
+
 }
