Add token to use Api OpenData

--- a/WebApiBicingGP/appsettings.json
+++ b/WebApiBicingGP/appsettings.json
@@ -7,8 +7,10 @@
   },
   "AllowedHosts": "*",
   "Url": {
-    "StatusInformation": "https://opendata-ajuntament.barcelona.cat/data/dataset/6aa3416d-ce1a-494d-861b-7bd07f069600/resource/b20e711d-c3bf-4fe5-9cde-4de94c5f588f/download",
-    "StationInformation": "https://opendata-ajuntament.barcelona.cat/data/dataset/bd2462df-6e1e-4e37-8205-a4b8e7313b84/resource/e5adca8d-98bf-42c3-9b9c-364ef0a80494/download"
+    "StatusInformation": "https://opendata-ajuntament.barcelona.cat/data/ca/dataset/estat-estacions-bicing/resource/1b215493-9e63-4a12-8980-2d7e0fa19f85/download/recurs.json",
+    "StationInformation": "https://opendata-ajuntament.barcelona.cat/data/ca/dataset/estat-estacions-bicing/resource/f60e9291-5aaa-417d-9b91-612a9de800aa/download/recurs.json",
+    "token": "---Use your token here--"
+    //Get your token in this page https://opendata-ajuntament.barcelona.cat/es/desenvolupadors
   }
 
 }
