--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,8 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/DocumentsAPI/API
+/DocumentsAPI/GoogleMaps
+/.gitignore
+/.gitignore
+/_Documentation
