--- a/BicingGPApplication/BicingGPApplication.csproj
+++ b/BicingGPApplication/BicingGPApplication.csproj
@@ -7,7 +7,25 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Domain\Json\BarcelonaCityBik\**" />
+    <Compile Remove="Domain\Json\RosarioCityBik\**" />
+    <Compile Remove="MediatR\OpenData\Station\**" />
+    <EmbeddedResource Remove="Domain\Json\BarcelonaCityBik\**" />
+    <EmbeddedResource Remove="Domain\Json\RosarioCityBik\**" />
+    <EmbeddedResource Remove="MediatR\OpenData\Station\**" />
+    <None Remove="Domain\Json\BarcelonaCityBik\**" />
+    <None Remove="Domain\Json\RosarioCityBik\**" />
+    <None Remove="MediatR\OpenData\Station\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="Domain\Station.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="MediatR\OpenData\Station\OpenDataStationInputDTO.cs" />
+    <Compile Include="MediatR\OpenData\Station\OpenDataStationOuputDTO.cs" />
+    <Compile Include="MediatR\OpenData\Station\StationMessageHandler.cs" />
   </ItemGroup>
 
   <ItemGroup>
