--- a/BicingGPApplication/BicingGPApplication.csproj
+++ b/BicingGPApplication/BicingGPApplication.csproj
@@ -1,28 +1,31 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Domain\Json\BarcelonaCityBik\**" />
-    <Compile Remove="Domain\Json\RosarioCityBik\**" />
+    <Compile Remove="MediatR\CityBik\Station\Paris\**" />
     <Compile Remove="MediatR\OpenData\Station\**" />
-    <EmbeddedResource Remove="Domain\Json\BarcelonaCityBik\**" />
-    <EmbeddedResource Remove="Domain\Json\RosarioCityBik\**" />
+    <EmbeddedResource Remove="MediatR\CityBik\Station\Paris\**" />
     <EmbeddedResource Remove="MediatR\OpenData\Station\**" />
-    <None Remove="Domain\Json\BarcelonaCityBik\**" />
-    <None Remove="Domain\Json\RosarioCityBik\**" />
+    <None Remove="MediatR\CityBik\Station\Paris\**" />
     <None Remove="MediatR\OpenData\Station\**" />
   </ItemGroup>
 
   <ItemGroup>
     <Compile Remove="Domain\Station.cs" />
+    <Compile Remove="MediatR\InputDTOBase.cs" />
+    <Compile Remove="MediatR\MediaTrMessage.cs" />
+    <Compile Remove="Services\OldStationServices.cs" />
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="MediatR\CityBik\Station\Paris\StationInputDTOParis.cs" />
+    <Compile Include="MediatR\CityBik\Station\Paris\StationMessageParisHandler.cs" />
+    <Compile Include="MediatR\CityBik\Station\Paris\StationOuputDTOParis.cs" />
     <Compile Include="MediatR\OpenData\Station\OpenDataStationInputDTO.cs" />
     <Compile Include="MediatR\OpenData\Station\OpenDataStationOuputDTO.cs" />
     <Compile Include="MediatR\OpenData\Station\StationMessageHandler.cs" />
