--- a/BicingGP.DataDomain/BicingGP.DataDomain.csproj
+++ b/BicingGP.DataDomain/BicingGP.DataDomain.csproj
@@ -7,7 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="OpenData\Station\RootStation.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="OpenData\Status\" />
   </ItemGroup>
 
 </Project>
