Agregar Proveedor de datos MiBiciTuBici - Rosario - Argentina mibicitubici.gob.ar

--- a/BicingGP.DataDomain/BicingGP.DataDomain.csproj
+++ b/BicingGP.DataDomain/BicingGP.DataDomain.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="CityBik\Generic\**" />
+    <EmbeddedResource Remove="CityBik\Generic\**" />
+    <None Remove="CityBik\Generic\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="OpenData\Station\RootStation.cs" />
   </ItemGroup>
 
