--- a/WebApiBicingGP/appsettings.json
+++ b/WebApiBicingGP/appsettings.json
@@ -11,7 +11,7 @@
     "OpenDataBarcelona": {
       "StatusInformation": "https://opendata-ajuntament.barcelona.cat/data/ca/dataset/estat-estacions-bicing/resource/1b215493-9e63-4a12-8980-2d7e0fa19f85/download/recurs.json",
       "StationInformation": "https://opendata-ajuntament.barcelona.cat/data/ca/dataset/estat-estacions-bicing/resource/f60e9291-5aaa-417d-9b91-612a9de800aa/download/recurs.json",
-      "token": "---Use your token here--",      
+      "token": "---Use your token here--",
       //Get your token in this page https://opendata-ajuntament.barcelona.cat/es/desenvolupadors
       "City": "Barcelona"
     },
@@ -29,6 +29,12 @@
       "StatusInformation": "http://api.citybik.es/v2/networks/velib",
       "StationInformation": "http://api.citybik.es/v2/networks/velib",
       "City": "Paris"
+    },
+    "MiBiciTuBici": {
+      "StatusInformation": "https://www.mibicitubici.gob.ar/opendata/station_status.json",
+      "StationInformation": "https://www.mibicitubici.gob.ar/opendata/station_information.json",
+      "City": "Rosario",
+      "Country" : "Argentina"
     }
   }
 }
