Transferir la estructura de clases Roots deserializadas desde BicingGP.DataDomain a cada elemento DataProvider de BicingGP.DataProvider. Cada DataProvider dispone de su propia clase mapeada deserializada. Cada DataProvider puede generar un metodo de extensión ToStatusDtoDefault y ToStationDtoDefault. Crear un DataProvider de test con datos básicos para testear los servicios StatusService y StationService

--- a/BicingGP.DataDomain/BicingGP.DataDomain.csproj
+++ b/BicingGP.DataDomain/BicingGP.DataDomain.csproj
@@ -9,21 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="CityBik\Generic\**" />
-    <EmbeddedResource Remove="CityBik\Generic\**" />
-    <None Remove="CityBik\Generic\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="OpenData\Station\RootStation.cs" />
+    <Compile Remove="CityBik\**" />
+    <Compile Remove="MibiciTuBici\**" />
+    <Compile Remove="OpenData\**" />
+    <EmbeddedResource Remove="CityBik\**" />
+    <EmbeddedResource Remove="MibiciTuBici\**" />
+    <EmbeddedResource Remove="OpenData\**" />
+    <None Remove="CityBik\**" />
+    <None Remove="MibiciTuBici\**" />
+    <None Remove="OpenData\**" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="OpenData\Status\" />
   </ItemGroup>
 
   <ItemGroup>
