Integrar sistema Velib - Paris

--- a/WebApiBicingGP/appsettings.json
+++ b/WebApiBicingGP/appsettings.json
@@ -6,7 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-
   "BikingProviders": {
     "OpenDataBarcelona": {
       "StatusInformation": "https://opendata-ajuntament.barcelona.cat/data/ca/dataset/estat-estacions-bicing/resource/1b215493-9e63-4a12-8980-2d7e0fa19f85/download/recurs.json",
@@ -34,7 +33,13 @@
       "StatusInformation": "https://www.mibicitubici.gob.ar/opendata/station_status.json",
       "StationInformation": "https://www.mibicitubici.gob.ar/opendata/station_information.json",
       "City": "Rosario",
-      "Country" : "Argentina"
+      "Country": "Argentina"
+    },
+    "Velib": {
+      "StatusInformation": "https://velib-metropole-opendata.smovengo.cloud/opendata/Velib_Metropole/station_status.json",
+      "StationInformation": "https://velib-metropole-opendata.smovengo.cloud/opendata/Velib_Metropole/station_information.json",
+      "City": "Paris",
+      "Country": "Francia"
     }
   }
 }
